--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -137,11 +137,15 @@ $link-hover-color:      darken($link-color, 15%) !default;
 //
 // Settings for the `<body>` element.
 
-
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
-$font-family-sans-serif:Helvetica, Arial, sans-serif !default;
+@font-face {
+  font-family: "Custom-Font";
+  src: url($custom-font)
+}
+
+$font-family-sans-serif:Custom-Font, Helvetica, Arial, sans-serif !default;
 $font-family-helvetica: $font-family-sans-serif !default;
 $font-family-serif:     Georgia, "Times New Roman", Times, serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
