added nofollow to vue.js error page

--- a/resources/views/PageDesign/Partials/VueError.twig
+++ b/resources/views/PageDesign/Partials/VueError.twig
@@ -58,7 +58,7 @@
                         {{ trans("Ceres::Template.devVueErrorMessage") }}
                         {% endautoescape %}
                     </p>
-                    <a href="{{ trans("Ceres::Template.devVueErrorLinkURL") }}" rel="noopener noreferrer" target="_blank" class="btn btn-primary btn-lg">{{ trans("Ceres::Template.devVueErrorLink") }}</a>
+                    <a href="{{ trans("Ceres::Template.devVueErrorLinkURL") }}" rel="noopener noreferrer nofollow" target="_blank" class="btn btn-primary btn-lg">{{ trans("Ceres::Template.devVueErrorLink") }}</a>
                     <hr>
                 </div>
             </div>
