--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -145,7 +145,7 @@ $link-hover-color:      darken($link-color, 15%) !default;
   src: url($custom-font)
 }
 
-$font-family-sans-serif:Custom-Font, Helvetica, Arial, sans-serif !default;
+$font-family-sans-serif:Custom-Font, sans-serif !default;
 $font-family-helvetica: $font-family-sans-serif !default;
 $font-family-serif:     Georgia, "Times New Roman", Times, serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
