--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -21,10 +21,7 @@
                     </div>
 
                     <h1 class="h2 title">
-                        <span v-if="currentVariation.bundleComponents">
-                            ${ currentVariationBundleName }
-                        </span>
-                        <span v-else>
+                        <span>
                             ${ currentVariation | itemName }
                         </span>
                     </h1>
