--- a/resources/views/ItemList/Components/ItemStoreSpecial.twig
+++ b/resources/views/ItemList/Components/ItemStoreSpecial.twig
@@ -1,6 +1,9 @@
 <script type="x/template" id="vue-item-store-special">
     <div class="special-tags">
-        <span class="tag" v-bind:class="tagClass">
+        <span v-if="bundle" class="tag bg-info">
+            {{ trans("Ceres::Template.itemBundle") }}
+        </span>
+        <span v-else class="tag" v-bind:class="tagClass">
             ${ label }
         </span>
     </div>
