--- a/resources/scss/ceres/widgets/_widgets.scss
+++ b/resources/scss/ceres/widgets/_widgets.scss
@@ -6,3 +6,4 @@
 @import "Common/image-carousel-widget";
 @import "Common/item-list-widget";
 @import "Common/title-bar-widget";
+@import "Common/text-widget";
