ADD css to handle small size in basket

--- a/resources/scss/ceres/views/Templates/BasketItemList/_basket-list-item.scss
+++ b/resources/scss/ceres/views/Templates/BasketItemList/_basket-list-item.scss
@@ -32,6 +32,12 @@
 		}
 	}
 
+	& .item-bundle {
+		width: 300px;
+		font-weight: 700;
+		font-size: 80%;
+	}
+
 	&.basket-large {
 		padding: 1.5rem 0;
 		
