FIX duplicate class

--- a/resources/views/Item/Components/ItemBundle.twig
+++ b/resources/views/Item/Components/ItemBundle.twig
@@ -1,5 +1,5 @@
 <script type="x/template" id="vue-item-bundle">
-    <div class="m-b-1" class="item-bundle">
+    <div class="m-b-1 item-bundle">
 		<template v-if="showItemBundleItems()">
 			<strong>{{ trans("Ceres::Template.itemBundleContent") }}</strong>
 			<div v-for="item in bundleComponents">
