--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -20322,7 +20322,7 @@ body.menu-is-visible {
 
 .widget-title-bar.widget-primary {
   color: #fff;
-  background-color: green;
+  background-color: #000000;
 }
 
 .widget-title-bar.widget-secondary {
