--- a/resources/views/Item/Components/ItemBundle.twig
+++ b/resources/views/Item/Components/ItemBundle.twig
@@ -1,11 +1,12 @@
 <script type="x/template" id="vue-item-bundle">
     <div class="m-b-1 item-bundle">
-		<template v-if="showItemBundleItems()">
-			<strong>{{ trans("Ceres::Template.itemBundleContent") }}</strong>
-			<div v-for="item in bundleComponents">
-				<span class="text-muted">${ item.quantity } x</span>
-				<a :href="item.data | itemURL"> ${ getBundleInnerText(item.data) | itemName } </a>
-			</div>
-		</template>
+			<div ref="bundleSetting" class="hidden">{{ services.webstoreConfig.getWebstoreConfig().dontSplitItemBundle }}</div>
+			<template v-if="showItemBundleItems()">
+				<strong>{{ trans("Ceres::Template.itemBundleContent") }}</strong>
+				<div v-for="item in bundleComponents">
+					<span class="text-muted">${ item.quantity } x</span>
+					<a :href="item.data | itemURL"> ${ getBundleInnerText(item.data) | itemName } </a>
+				</div>
+			</template>
     </div>
 </script>
