FIX tag list for bundle items on child components

--- a/resources/views/Category/Item/Partials/CategoryListItem.twig
+++ b/resources/views/Category/Item/Partials/CategoryListItem.twig
@@ -72,7 +72,7 @@
 
                 {% endif %}
 
-                {% if item.data.variation.bundleType %}
+                {% if item.data.variation.bundleType == "bundle" %}
 
                     <span class="tag bg-info">
                         {{ trans("Ceres::Template.itemBundle") }}
