--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -41,7 +41,7 @@
                                 :recommended-retail-price="itemData.prices.rrp"
                                 :variation-retail-price="itemData.prices.default"
                                 :decimal-count="decimalCount"
-                                :bundle="itemData.variation.bundleType"></item-store-special>
+                                :bundle-type="itemData.variation.bundleType"></item-store-special>
             <!-- ./STORE SPECIALS -->
 
             <!-- ITEM DETAILS -->
