--- a/resources/views/ItemList/Components/ItemStoreSpecial.twig
+++ b/resources/views/ItemList/Components/ItemStoreSpecial.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-item-store-special">
     <div class="special-tags">
-        <span v-if="bundle" class="tag bg-info">
+        <span v-if="bundleType === 'bundle'" class="tag bg-info">
             {{ trans("Ceres::Template.itemBundle") }}
         </span>
         <span v-else class="tag" v-bind:class="tagClass">
