--- a/resources/scss/ceres/widgets/Common/_text-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_text-widget.scss
@@ -1,10 +1,23 @@
 .widget-text
 {
-    color: red;
-
     .widget-inner
     {
         // padding: 1rem 1.5rem;
+
+        .placeholder {
+            height: 75px;
+
+            &.placeholder-text {
+                border: 3px dashed #dadae3;
+                border-radius: 3px;
+                line-height: 75px;
+                vertical-align: middle;
+                text-align: center;
+                color: #dadae3;
+                font-size: 20px;
+                font-style: italic;
+            }
+        }
     }
 
     &.widget-primary
