--- a/resources/views/PageDesign/Partials/Header/Navigation.twig
+++ b/resources/views/PageDesign/Partials/Header/Navigation.twig
@@ -1,7 +1,7 @@
 {% set companyLogo  = config("Ceres.header.company_logo") %}
 {% set lang         = services.sessionStorage.getLang() %}
 {% set showHeaderNavBar = config("Ceres.header.show_navbars") %}
-{% set companyName  = config("Ceres.header.company_name") %}
+{% set companyName  = trans("Ceres::Template.headerCompanyName") %}
 {% set useMegaMenu  = config("Ceres.header.megamenu_levels") > 1 %}
 
 <nav class="navbar{% if useMegaMenu %} megamenu{%endif%}">
